fix: webpack electron target, add version check with tweet, fix tag spacing

--- a/client/src/components/StratEditor/StratEditor.scss
+++ b/client/src/components/StratEditor/StratEditor.scss
@@ -78,7 +78,6 @@
         height: 16px;
         transform: translateY(2px);
         margin-right: 4px;
-        margin-left: -2px;
       }
 
       &:hover {
